--- a/project/package.json
+++ b/project/package.json
@@ -6,6 +6,8 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.6.8",
+    "cors": "^2.8.5",
     "fs": "^0.0.1-security",
     "mariadb": "^3.3.0",
     "react": "^18.3.1",
